--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Leon Thorne <ldthorne96@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "next": "^4.2.1",
+    "next": "^6.1.1",
+    "next-fonts": "^0.10.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
