--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "Leon Thorne <ldthorne96@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.1",
+    "@fortawesome/free-solid-svg-icons": "^5.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.0",
     "next": "^6.1.1",
-    "next-fonts": "^0.10.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
